--- a/app/src/main/res/drawable-v24/background_circle.xml
+++ b/app/src/main/res/drawable-v24/background_circle.xml
@@ -2,9 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <corners android:radius="250dp"/>
-
-    <stroke android:width="2dp"
-        android:color="@color/colorGrey"/>
+    <solid android:color="?attr/cr" />
 
 </shape>
