--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,8 @@
         <attr name="buttoncolour" format="color"/>
         <attr name="icons" format="color"/>
         <attr name="headerDivider" format="color"/>
+        <attr name="cr" format="color"/>
+        <attr name="iconcolour" format="color"/>
 
         <attr name="black" format="color"/>
         <attr name="white1" format="color"/>
