--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,8 +20,10 @@
         <item name="textcolour">#000000</item>
         <item name="icons">#000000</item>
         <item name="headerDivider">@color/grey_80</item>
+        <item name="cr">#F2F2F2</item>
 
         <item name="buttoncolour">#05AFF2</item>
+        <item name="iconcolour">#A6A6A6</item>
 
         <item name="bottomNavIconColor">#5F6368</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
@@ -42,6 +44,8 @@
         <item name="buttoncolour">#0390FB</item>
         <item name="icons">#FFFFFF</item>
         <item name="headerDivider">@color/light100</item>
+        <item name="cr">#585859</item>
+        <item name="iconcolour">#A6A6A6</item>
 
         <item name="toolbarTextColor">#80868B</item>
         <item name="bottomNavIconColor">#BDC1C6</item>
