--- a/app/src/main/res/layout/popular_view.xml
+++ b/app/src/main/res/layout/popular_view.xml
@@ -21,6 +21,20 @@
             android:src="@drawable/user" />
 
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="8dp"
+            android:paddingLeft="@dimen/spacing_large"
+            android:paddingRight="@dimen/spacing_large"
+            android:text="4.3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="@color/white" />
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/progressbars"
             android:layout_width="81dp"
@@ -46,17 +60,32 @@
             android:layout_margin="@dimen/spacing_large"
             app:cardCornerRadius="@dimen/spacing_medium"
             app:cardElevation="0dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/spacing_xlarge"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="34dp"
             android:gravity="center"
             android:paddingLeft="@dimen/spacing_large"
             android:paddingRight="@dimen/spacing_large"
             android:text="Aliquam Lucidus"
+            android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="?attr/textcolour" />
+            android:textColor="@color/white" />
+
+        <ImageView
+            android:id="@+id/textView3"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="97dp"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:src="@drawable/star"
+            app:tint="@color/rallyYellow" />
+
 
     </RelativeLayout>
 
