--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,60 +31,73 @@
         android:paddingBottom="6dp">
 
 
-
-         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="2dp"
-             android:background="@color/blueTransparentDark"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
+         <androidx.cardview.widget.CardView
+             android:id="@+id/locationfindinglayout"
+             android:layout_width="match_parent"
+             android:layout_height="169dp"
+             app:cardBackgroundColor="?attr/cardview"
+             app:cardCornerRadius="6dp"
+             app:cardElevation="3dp"
+             app:cardUseCompatPadding="true">
 
              <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginStart="24dp"
-                     android:layout_marginTop="24dp"
-                     android:layout_marginEnd="24dp"
-                     android:fontFamily="@font/poppins_bold"
-                     android:text="Popular"
-                     android:textColor="?attr/textcolour"
-                     android:textSize="26sp"
-                     android:textStyle="bold" />
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_marginBottom="2dp"
+                  android:gravity="center_vertical"
+                 android:orientation="horizontal"
+                 android:padding="12dp">
+
 
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:orientation="horizontal">
-
-                     <ImageView
-                          android:layout_width="24dp"
-                         android:layout_height="24dp"
-                         android:layout_marginStart="14dp"
-                         android:src="@drawable/location"
-                         />
+                     android:orientation="vertical">
 
                      <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                       android:fontFamily="@font/poppins"
-                         android:layout_marginStart="@dimen/padding_10"
-                    android:textColor="?attr/textcolour"
-                    android:text="Choose your top genres from below list"
-                    android:textSize="14sp" />
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginStart="14dp"
+                         android:layout_marginTop="24dp"
+                         android:layout_marginEnd="24dp"
+                         android:fontFamily="@font/poppins_bold"
+                         android:text="Current Location"
+                         android:textColor="?attr/textcolour"
+                         android:textSize="20sp"
+                         android:textStyle="bold" />
+
+                     <ImageView
+                         android:layout_width="24dp"
+                         android:layout_height="24dp"
+                         android:layout_marginStart="14dp"
+                         android:layout_marginTop="@dimen/padding_10"
+                         android:src="@drawable/location"
+                         app:tint="@color/green_A700" />
+
+                     <LinearLayout
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:orientation="horizontal">
+
+                         <TextView
+                             android:id="@+id/locationtext"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:layout_marginStart="@dimen/padding_10"
+                             android:layout_marginTop="@dimen/padding_10"
+                             android:fontFamily="@font/poppins_semibold"
+                             android:singleLine="true"
+                             android:text="Choose your top genres from below list"
+                             android:textColor="?attr/textcolour"
+                             android:textSize="14sp" />
+
+                     </LinearLayout>
 
                  </LinearLayout>
-            </LinearLayout>
 
-        </LinearLayout>
-
+             </LinearLayout>
+         </androidx.cardview.widget.CardView>
 
          <LinearLayout
              android:layout_width="match_parent"
@@ -98,7 +111,7 @@
              android:weightSum="3">
 
              <LinearLayout
-                 android:id="@+id/sendAmountGrid"
+                 android:id="@+id/boyshostel"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
@@ -133,7 +146,7 @@
              </LinearLayout>
 
              <LinearLayout
-                 android:id="@+id/receiveAmountGrid"
+                 android:id="@+id/gerilshostel"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
@@ -167,7 +180,7 @@
              </LinearLayout>
 
              <LinearLayout
-                 android:id="@+id/walletGrid"
+                 android:id="@+id/homestay"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
@@ -215,7 +228,7 @@
              android:weightSum="3">
 
              <LinearLayout
-                 android:id="@+id/sendAmountGridA"
+                 android:id="@+id/lowbudget"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
@@ -250,7 +263,7 @@
              </LinearLayout>
 
              <LinearLayout
-                 android:id="@+id/receiveAmAountGrid"
+                 android:id="@+id/mediumbudget"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
@@ -285,7 +298,7 @@
              </LinearLayout>
 
              <LinearLayout
-                 android:id="@+id/walleAtGrid"
+                 android:id="@+id/premium"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
@@ -320,6 +333,81 @@
 
 
          </LinearLayout>
+
+
+         <LinearLayout
+             android:id="@+id/seek_layout"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="24dp"
+             android:orientation="vertical">
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="start"
+                 android:text="Choose Your Budget"
+                 android:layout_marginStart="@dimen/_27sdp"
+                 android:fontFamily="@font/poppins_bold"
+                  android:textColor="?attr/textcolour"
+                 android:textSize="20sp"
+                 android:textStyle="bold" />
+
+             <SeekBar
+                 android:id="@+id/seek1"
+                 style="@style/Widget.AppCompat.SeekBar"
+                 android:layout_width="match_parent"
+                 android:layout_height="25dp"
+                 android:layout_marginTop="16dp"
+                 android:backgroundTint="@color/colorAccent"
+                 android:min="1000"
+                 android:max="20000"
+                 android:progress="40"
+                 android:progressTint="@color/colorAccent"
+                 android:thumbTint="@color/colorAccent" />
+             <LinearLayout
+                  android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="4dp"
+                 android:layout_gravity="center"
+                 android:orientation="vertical">
+
+                 <TextView
+                     android:id="@+id/rangeammount"
+                     android:layout_width="117dp"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center"
+                     android:layout_marginTop="5dp"
+                      android:background="@drawable/textview"
+                     android:fontFamily="@font/poppins_semibold"
+                     android:gravity="center"
+                     android:padding="5dp"
+                     android:text="Range"
+                     android:visibility="gone"
+                     android:textColor="?attr/textcolour"
+                     android:textSize="15sp"
+                     android:textStyle="bold" />
+
+                 <Button
+                     android:id="@+id/rangebutton"
+                     android:layout_width="347dp"
+                     android:layout_height="wrap_content"
+                      android:background="@drawable/button"
+                      android:padding="@dimen/_50sdp"
+
+                     android:paddingBottom="@dimen/_27sdp"
+                     android:layout_gravity="center"
+                     android:layout_marginTop="@dimen/_27sdp"
+                     android:textAllCaps="false"
+                     android:textColor="@color/white"
+                     android:textSize="16sp"
+                     app:layout_constraintBottom_toBottomOf="parent"
+                     app:layout_constraintEnd_toEndOf="parent"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
+
+             </LinearLayout>
+         </LinearLayout>
          <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -336,7 +424,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Popular"
+                android:text="Nearest"
                 android:textColor="?attr/textcolour"
                 android:textSize="26sp"
                 android:textStyle="bold" />
@@ -430,8 +518,8 @@
                      android:layout_height="wrap_content"
                      android:layout_alignParentEnd="true"
                      android:layout_alignParentBottom="true"
-                     android:layout_marginEnd="113dp"
-                     android:layout_marginBottom="53dp"
+                     android:layout_marginEnd="58dp"
+                     android:layout_marginBottom="43dp"
                      android:orientation="vertical"
                      android:padding="5dp">
 
@@ -439,9 +527,9 @@
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:fontFamily="@font/poppins_bold"
-                         android:text="Trun ON Location"
+                         android:text="Trun ON Location  And Refresh"
                          android:textColor="?attr/textcolour"
-                         android:textSize="20sp"
+                         android:textSize="18sp"
                          android:textStyle="bold" />
 
                      <Button
@@ -477,7 +565,7 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Nearest"
+                    android:text="Popular"
                     android:textColor="?attr/textcolour"
                     android:textSize="26sp"
                     android:textStyle="bold" />
