--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -76,17 +76,17 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/sechnodata"
-                android:layout_width="277dp"
-                android:layout_height="196dp"
+                android:layout_width="257dp"
+                android:layout_height="144dp"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="54dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginTop="27dp"
+                android:layout_marginEnd="86dp"
                 app:lottie_autoPlay="true"
                 app:lottie_fileName="s.json"
                 app:lottie_loop="true" />
@@ -94,10 +94,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/search"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
                 android:scrollingCache="true"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
@@ -117,40 +118,7 @@
         android:paddingBottom="6dp">
 
 
-        <LinearLayout
-            android:id="@+id/findnearbyme"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/backgroundColorApp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical"
-            android:paddingBottom="6dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-
-                <View
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
-                    android:background="@drawable/topcorner"
-                    android:backgroundTint="@color/red"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                       android:text="Find near by me"
-                    android:textAlignment="center"
-                    android:layout_marginTop="60dp"
-                    android:textColor="@color/black"
-                    android:textSize="35dp"
-                    android:textStyle="bold" />
-
-
-            </RelativeLayout>
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -175,12 +143,12 @@
     <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="20dp"
                 android:layout_gravity="center"
                 android:layout_marginEnd="24dp"
 
                 android:fontFamily="@font/poppins_bold"
-                android:text="Popular"
+                android:text="Nearest Gents Hostel"
                 android:textColor="?attr/textcolour"
                 android:textSize="26sp"
                 android:textStyle="bold" />
@@ -279,7 +247,7 @@
                         android:layout_margin="4dp"
                         android:background="@drawable/background_circle"
                         android:padding="12dp"
-                        android:src="@drawable/boy"
+                        android:src="@drawable/gerils"
                         app:tint="?attr/textcolour" />
 
                     <TextView
@@ -290,7 +258,7 @@
                         android:layout_marginEnd="24dp"
 
                         android:fontFamily="@font/poppins_bold"
-                        android:text="Popular"
+                        android:text="Nearest Girels Hostel"
                         android:textColor="?attr/textcolour"
                         android:textSize="26sp"
                         android:textStyle="bold" />
@@ -329,9 +297,9 @@
 
 
                     <com.facebook.shimmer.ShimmerFrameLayout
-                        android:id="@+id/nearest_shimer"
+                        android:id="@+id/popular_shimerd"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="206dp"
                         android:layout_gravity="center"
                         android:orientation="vertical"
                         android:background="?attr/backgroundColorApp"
@@ -346,11 +314,11 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
-                            <include layout="@layout/shimer_nearest" />
-                            <include layout="@layout/shimer_nearest" />
-                            <include layout="@layout/shimer_nearest" />
+                            <include layout="@layout/shimer" />
+                            <include layout="@layout/shimer" />
+                            <include layout="@layout/shimer" />
 
                             <!--                                <include layout="@layout/shimer" />-->
 
@@ -374,65 +342,6 @@
 
 
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="12dp"
-                android:weightSum="3">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:padding="8dp">
-
-                    <com.airbnb.lottie.LottieAnimationView
-                        android:layout_width="122dp"
-                        android:layout_height="101dp"
-
-                        app:lottie_autoPlay="true"
-                        app:lottie_fileName="find.json"
-                        app:lottie_loop="true" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginBottom="4dp"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="Find Budget Free Hostel"
-                        android:textColor="?attr/textcolour"
-                        android:textSize="14sp" />
-
-
-                    <ImageView
-                        android:layout_width="55dp"
-                        android:layout_height="55dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/dobel_arrows"
-                        app:tint="?attr/textcolour" />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-
-
-
 
 
         </LinearLayout>
