--- a/app/src/main/res/layout/viewall.xml
+++ b/app/src/main/res/layout/viewall.xml
@@ -1,38 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="180dp"
+    android:layout_width="match_parent"
+    android:layout_height="206dp"
     app:cardBackgroundColor="?attr/backgroundColorApp"
-    app:cardCornerRadius="6dp"
+    app:cardCornerRadius="@dimen/spacing_middle"
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="280dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/nearest_hostel_img"
+            android:id="@+id/popular_hostel_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/user" />
 
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="306dp"
+            android:layout_marginBottom="13dp"
+            android:paddingLeft="@dimen/spacing_large"
+            android:paddingRight="@dimen/spacing_large"
+            android:text="4.3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="@color/white" />
+
         <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/progressbar"
-            android:layout_width="149dp"
-            android:layout_height="140dp"
+            android:id="@+id/progressbars"
+            android:layout_width="81dp"
+            android:layout_height="65dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="66dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="65dp"
-            android:layout_marginBottom="13dp"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="38dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginBottom="88dp"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,49 +58,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/spacing_large"
-             app:cardCornerRadius="@dimen/spacing_medium"
+            app:cardCornerRadius="@dimen/spacing_medium"
             app:cardElevation="0dp"/>
-
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/spacing_xlarge"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="130dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="34dp"
             android:gravity="center"
             android:paddingLeft="@dimen/spacing_large"
             android:paddingRight="@dimen/spacing_large"
             android:text="Aliquam Lucidus"
+            android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/white" />
 
         <ImageView
+            android:id="@+id/textView3"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="241dp"
+            android:layout_marginEnd="360dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:src="@drawable/star"
             app:tint="@color/rallyYellow" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/spacing_xlarge"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="198dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center"
-            android:paddingLeft="@dimen/spacing_large"
-            android:paddingRight="@dimen/spacing_large"
-            android:text="4.5"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="@color/white" />
 
 
     </RelativeLayout>
