--- a/app/src/main/res/layout/activity_viewall.xml
+++ b/app/src/main/res/layout/activity_viewall.xml
@@ -41,6 +41,7 @@
 
 
                 <TextView
+                    android:id="@+id/head"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
