--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -81,13 +81,12 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/sechnodata"
-                android:layout_width="257dp"
+                android:layout_width="match_parent"
                 android:layout_height="144dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="27dp"
-                android:layout_marginEnd="86dp"
-                app:lottie_autoPlay="true"
+                 app:lottie_autoPlay="true"
                 app:lottie_fileName="s.json"
                 app:lottie_loop="true" />
 
